# files-box

./: .gitignore
front/: angular.json  package.json
front/src/: styles.scss
front/src/app/: app.component.ts  app.routes.ts
front/src/app/components/file-list/: file-list.component.ts
front/src/app/components/file-preview-modal/: file-preview-modal.component.ts
front/src/app/components/file-upload/: file-upload.component.ts
front/src/app/components/folder-browser/: folder-browser.component.ts
front/src/app/components/nav-menu/: nav-menu.component.ts
front/src/app/components/notifications/: notifications.component.ts
front/src/app/guards/: auth.guard.ts
front/src/app/interfaces/: folder.interface.ts
front/src/app/pages/file-management/: file-management.component.ts
front/src/app/pages/files/: files.component.ts
front/src/app/pages/home/: home.component.ts
front/src/app/services/: auth.service.ts  file.service.ts  notification.service.ts
server/: Cargo.toml  readme.md
server/migrations/: 20250112152618_3.0.sql
server/src/: main.rs
server/src/config/: api.rs  api_types.rs  app_state.rs  auth.rs  files_actions.rs  mod.rs  send_email.rs
server/src/db/: pool.rs
server/src/handlers/: auth.rs  custom.rs  files.rs  mod.rs  user.rs
server/src/models/: api.rs  app.rs  auth.rs  files.rs  mod.rs  user.rs
server/src/repositories/: auth_repository.rs  mod.rs  user_repository.rs
server/src/routes/: auth_router.rs  files_router.rs  mod.rs  user_router.rs
server/src/services/: auth_service.rs  files_service.rs  mod.rs  user_service.rs
(+3 files in other folders)
