[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.11"
rand = "0.8"
utoipa = { version = "5.3.1", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }